# Stalactite

./: .gitignore  .pyre_configuration  README.md  pyproject.toml  rsync-repo  rsync_repo
.github/workflows/: ci.yml
comm_experimental/: constants.py  experiment_helpers.py  grpc_client.py  grpc_client_upd.py  grpc_server.py  helpers.py  utils.py
comm_experimental/gen_code/: services_pb2.py  services_pb2.pyi  services_pb2_grpc.py
comm_experimental/protos/: generate_protos  services.proto
configs/: config-single.yml  config-test.yml  config-vm-sber.yml  config-vm-vk.yml  config-vm-yc.yml  config.yml  local-linreg-seq-mnist.yml
docker/: grpc-base-cpu.dockerfile  grpc-base.dockerfile
docs/: conf.py  configuration_file_tutorial.rst  data_processing_tutorial.rst  distr_communicator_tutorial.rst  index.rst  launch_prerequisites_tutorial.rst  local_communicator_tutorial.rst  modules.rst  overview.rst  quickstart.rst  stalactite.communications.grpc_utils.generated_code.rst  stalactite.communications.grpc_utils.rst  stalactite.communications.rst  stalactite.data_preprocessors.rst  stalactite.ml.arbitered.rst  stalactite.ml.honest.linear_regression.rst  stalactite.ml.honest.logistic_regression.rst  stalactite.ml.honest.rst  stalactite.ml.honest.split_learning.efficientnet.rst  stalactite.ml.honest.split_learning.mlp.rst  stalactite.ml.honest.split_learning.resnet.rst  stalactite.ml.honest.split_learning.rst  stalactite.ml.rst  stalactite.models.rst  stalactite.models.split_learning.rst  stalactite.rst  tutorial.rst
docs/tutorials/: batching_tutorial.rst  configuration_file_tutorial.rst  data_processing_tutorial.rst  distr_communicator_tutorial.rst  inference_tutorial.rst  launch_prerequisites_tutorial.rst  local_communicator_tutorial.rst  master_types.rst  plugins.rst
examples/configs/: arbitered-logreg-sbol-smm-local-he.yml  arbitered-logreg-sbol-smm-local-no-features-master.yml  arbitered-logreg-sbol-smm-local.yml  arbitered-logreg-sbol-smm-multiprocess-disabled-he.yml  arbitered-logreg-sbol-smm-multiprocess-no-features-master.yml  arbitered-logreg-sbol-smm-multiprocess.yml  arbitered-logreg-sbol-smm-test.yml  efficientnet-splitNN-mnist-local.yml  efficientnet-splitNN-mnist-local_ag.yml  efficientnet-splitNN-mnist-multiprocess.yml  linreg-mnist-local.yml  linreg-mnist-local_ag.yml  linreg-mnist-local_cloudru.yml  linreg-mnist-multiprocess.yml  linreg-mnist-multiprocess_ag.yml  linreg-mnist-multiprocess_cloudru.yml  linreg-mnist-seq-local.yml  linreg-mnist-single.yml  logreg-mnist-local.yml  logreg-sbol-smm-local.yml  logreg-sbol-smm-local_ag.yml  logreg-sbol-smm-multiprocess-vm-yc.yml  logreg-sbol-smm-multiprocess.yml  logreg-sbol-smm-single.yml  logreg-sbol-smm-vm-sber.yml  logreg-sbol-smm-vm-vk.yml  logreg-sbol-smm-vm-yc.yml  mlp-splitNN-sbol-smm-local.yml  mlp-splitNN-sbol-smm-multiprocess.yml  resnet-splitNN-sbol-smm-local.yml  resnet-splitNN-sbol-smm-multiprocess.yml  tenseal-logreg-sbol-smm-local.yml
examples/single-agent/: linear_regression_mnist.py  logreg_sbol_smm.py
examples/utils/: arbitered_local_experiment_single.py  helpers.py  local_arbitered_experiment.py  local_experiment.py  local_experiment_single.py  prepare_data_arbitered_no_master_features.py  (+6 more)
experiments/: README.md  docker-compose.yml  experiment.dockerfile  grpc_client.py  grpc_server.py  grpc_task_client.py  prepare_sber_datasets.py  prometheus.yml  run-distributed-experiment  run-experiment  run_efficientnet_mnist.py  run_experiment.py  run_logreg_mnist.py  run_mlp_single.py  run_mlp_vfl.py  run_mnist.py  run_resnet_single.py  run_resnet_vfl.py  run_single_efficientnet_mnist.py  run_vfl_efficientnet_mnist.py  sync.sh  update_stalactite_airflow.sh
prerequisites/: docker-compose-mlflow.yml  docker-compose-monitoring.yml  docker-compose.yml
securtity_protocol_bench/: benchmark_paillier.py
stalactite/: PartyImpl.py  PartyMemberImpl.py  PatyMasterImpl.py  base.py  base.py.orig  batching.py  communications.py  configs.py  data_loader.py  data_utils.py  helpers.py  main.py  main_grpc.py  main_local.py  metrics.py  mocks.py  party_Impl.py  party_master.py  party_master_Impl.py  party_master_impl.py  party_member.py  party_member_Impl.py  party_member_impl.py  party_single_impl.py  pet.py  run_grpc_agent.py  run_grpc_master.py  run_grpc_member.py  run_mnist.py  run_simulation.py  utils.py  utils_main.py
tests/: conftest.py  test_local.py  test_main_local.py
(+227 files in other folders)
