[tool.poetry]
name = "stalactite"
version = "0.1.0"
description = "\"A Framework for Vertical Federated Learning\""
authors = ["fonhorst <fonhorst@alipoov.nb@gmail.com>"]
readme = "README.md"
packages = [
    { include = "stalactite" }
]

[tool.poetry.dependencies]
python = "^3.9,<3.13"
torch = "^2.1.1"
pytest = "^7.4.3"
click = "^8.1.7"
numpy = "^1.24"
scikit-learn = "^1.3.2"
jupyter = "^1.0.0"
datasets = "^2.15.0"
pyyaml = "^6.0.1"
torchvision = "^0.16.1"
grpcio = "^1.59.3"
safetensors = "^0.4.0"
prometheus-client = "^0.19.0"
docker = "*"
mlflow = "*"
pydantic = "^2.5.3"
tenseal = "^0.3.14"


[tool.poetry.group.dev.dependencies]
grpcio-tools = "^1.59.3"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-docker = "^2.0.1"
pytest-timeout = "^2.2.0"
pytest-reportlog = "^0.4.0"

[tool.poetry.scripts]
stalactite = "stalactite.main:cli"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
